--- a/ansible/templates/env.j2
+++ b/ansible/templates/env.j2
@@ -1,5 +1,5 @@
 # Flarum Configuration
-FORUM_URL={{ 'https://' + domain_name if domain_name else 'http://' + ansible_default_ipv4.address }}
+FORUM_URL=http://{{ ansible_default_ipv4.address }}
 DEBUG=false
 
 # Database Configuration
@@ -15,18 +15,8 @@ MYSQL_DATABASE={{ mysql_database }}
 MYSQL_USER={{ mysql_user }}
 MYSQL_PASSWORD={{ mysql_password }}
 
-# Flarum Admin Configuration
-FLARUM_ADMIN_EMAIL={{ flarum_admin_email }}
-FLARUM_ADMIN_USERNAME={{ flarum_admin_username }}
-FLARUM_ADMIN_PASSWORD={{ flarum_admin_password }}
-
 # SSL Configuration
-{% if domain_name %}
-SSL_ENABLED=true
-SSL_DOMAIN={{ domain_name }}
-{% else %}
 SSL_ENABLED=false
-{% endif %}
 
 # Docker Configuration
 DOCKER_COMPOSE_VERSION={{ docker_compose_version }}
