--- a/ansible/templates/docker-compose.yml.j2
+++ b/ansible/templates/docker-compose.yml.j2
@@ -16,15 +16,12 @@ services:
       - UID=1000
       - GID=1000
       - DEBUG=false
-      - FORUM_URL={{ 'https://' + domain_name if domain_name else 'http://' + ansible_default_ipv4.address }}
+      - FORUM_URL=http://{{ ansible_default_ipv4.address }}
       - DB_HOST=mysql
       - DB_PORT=3306
       - DB_NAME={{ mysql_database }}
       - DB_USER={{ mysql_user }}
       - DB_PASSWORD={{ mysql_password }}
-      - FLARUM_ADMIN_EMAIL={{ flarum_admin_email }}
-      - FLARUM_ADMIN_USERNAME={{ flarum_admin_username }}
-      - FLARUM_ADMIN_PASSWORD={{ flarum_admin_password }}
     depends_on:
       - mysql
     networks:
